fix gh workflow access level

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,6 +8,9 @@ name: Build container Image
 jobs:
   deploy:
     runs-on: "ubuntu-latest"
+    permissions:
+      contents: read
+      packages: write
     steps:
 
     - name: Get the version
