store ssh fingerprint

--- a/config.yml
+++ b/config.yml
@@ -10,6 +10,7 @@ http:
   domain: http://localhost:4200
   database:
     dsn: postgres://sdump:sdump@localhost:3432/sdump?sslmode=disable
+    log_queries: true
 
   prometheus:
     username: sdump
