--- a/datastore/postgres/testdata/fixtures/urls.yml
+++ b/datastore/postgres/testdata/fixtures/urls.yml
@@ -3,6 +3,7 @@
 - id: b35ac310-9fa2-40e1-be39-553b07d6235b
   reference: cmltg1eg330l5l1vq11g
   is_active: true
+  user_id: 8511ac86-5079-42ae-a030-cb46e6dbfbda
   metadata: "{}"
   created_at: '2024-01-20 14:26:13.237292+00'
   updated_at: '2024-01-20 14:26:13.237292+00'
@@ -10,6 +11,7 @@
 - id: df1f03c9-1831-442a-9035-0f77bc413ec1
   reference: cmltfm6g330l5l1vq110
   is_active: true
+  user_id: 8511ac86-5079-42ae-a030-cb46e6dbfbda
   metadata: "{}"
   created_at: '2024-01-20 14:25:28.301043+00'
   updated_at: '2024-01-20 14:25:28.301043+00'
