--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,7 @@ services:
     volumes:
       - ./data/postgres/postgresql:/var/lib/postgres
 
+  redis_server:
+    image: redis
+    ports:
+      - "3379:6379"
