--- a/config.yml
+++ b/config.yml
@@ -6,8 +6,8 @@ cron:
 ssh:
   port: 2222
   allow_list:
-    - ~/.ssh/Lanre.pem
-    - ~/.ssh/id_rsa.pub
+    - ./.ssh/id_rsa.pub
+    - /Users/lanreadelowo/.ssh/id_rsa.pub
   identities:
     - "id_ed25519"
 
