Limit access to ssh server by public keys (#29)
* start working on limiting who can access/ssh server

* parse public key and check if it exists in the allowlist

* make operation o(1) since we have a lookup table already

* fix config name

--- a/config.yml
+++ b/config.yml
@@ -5,6 +5,9 @@ cron:
 
 ssh:
   port: 2222
+  allow_list:
+    - ./.ssh/id_rsa.pub
+    - /Users/lanreadelowo/.ssh/id_rsa.pub
   identities:
     - "id_ed25519"
 
