--- a/config.yml
+++ b/config.yml
@@ -42,7 +42,7 @@ http:
     # dsn: "file::memory:?cache=shared"
     ## should we log sql queries? In prod, no but in local mode, you probably want to
     log_queries: true
-    # driver: "sqllite"
+    # driver: "sqlite"
 
   #  limit the size of jSON request body that can be sent to endpoints
   max_request_body_size: 500
